Cambios en los ejercicios de programacion